--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <div class="adress-group">
                     <i class="far fa-envelope fa-3x text-red"></i>
                     <h2 class="text-grey md-heading">Email</h2>
-                    <p>adityakushwaha62024@gmail.com</p>
+                    <p>adityaofficialmth@gmail.com</p>
                 </div>
                 <div class="adress-group">
                     <i class="fas fa-phone square-alt fa-3x text-red"></i>
